--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-hook-form": "^7.56.1",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.1",
+    "react-router-dom": "^7.6.0",
+    "redux-persist": "^6.0.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
